--- a/src/weatherappstyle.css
+++ b/src/weatherappstyle.css
@@ -119,19 +119,6 @@ footer {
   border-radius: 4px;
   margin-bottom: -10px;
 }
-.celsius:focus {
-  padding: 6px 4px;
-  margin-right: 5px;
-  margin-left: 1%;
-  width: 10%;
-  background-color: #fafafa;
-  color: #6b2b01;
-  font-size: bolder;
-  border: 1px solid #db5902;
-  box-shadow: 1px 2px 3px grey;
-  border-radius: 4px;
-  margin-bottom: -10px;
-}
 .farenheit {
   padding: 6px 4px;
   margin-right: 5px;
@@ -155,7 +142,7 @@ footer {
   border-radius: 4px;
   margin-bottom: -10px;
 }
-.farenheit:focus {
+.active {
   padding: 6px 4px;
   margin-right: 5px;
   width: 10%;
