--- a/src/weatherappstyle.css
+++ b/src/weatherappstyle.css
@@ -196,18 +196,20 @@ footer {
 #average-temperature-bold {
   font-weight: bold;
 }
-#littlecontainer {
+.weekdays {
   display: inline-flex;
   color: #321891;
   background-color: #95d1cc;
   border: 1px solid #273f5a;
   box-shadow: 1px 2px 5px #daddfc;
   border-radius: 4px;
-  padding: 5px 8px;
+  padding-left: 8px;
+  padding-bottom: 8px;
   text-align: center;
   margin-left: 0.6%;
-  width: 19.2%;
+  width: 13%;
   margin-bottom: -5px;
+  font-size: small;
 }
 .spacing {
   margin-top: -20px;
